--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "prettier": "^1.19.1",
+    "standard": "^14.3.1",
     "webpack-dev-server": "^3.10.1"
   }
 }
